--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,11 @@
 <html>
   <head>
     <title>Wines</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <my-app>Loading...</my-app>
